add leaflet map

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-
+    <div class="map"></div>
     <!-- IP Address Tracker Search for any IP address or domain IP Address Location
     Timezone UTC -->
     <!-- add offset value dynamically using the API -->
